--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,6 @@
         "symfony/twig-bundle": "^4.4",
         "symfony/validator": "4.4.*",
         "symfony/web-link": "4.4.*",
-        "symfony/web-profiler-bundle": "^4.4",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
@@ -47,7 +46,8 @@
         "symfony/debug-bundle": "^4.4",
         "symfony/maker-bundle": "^1.21",
         "symfony/phpunit-bridge": "^5.1",
-        "symfony/var-dumper": "^4.4"
+        "symfony/var-dumper": "^4.4",
+        "symfony/web-profiler-bundle": "^4.4"
     },
     "config": {
         "preferred-install": {
