--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,12 +1,10 @@
 security:
 
   providers:
-    users:
+    users_db_provider:
       entity:
         class: 'App\Entity\Participant'
         property: 'mail'
-
-    users_in_memory: { memory: null }
 
   firewalls:
     dev:
@@ -15,14 +13,14 @@ security:
 
     main:
       anonymous: lazy
-      provider: users_in_memory
+      provider: users_db_provider
       guard:
         authenticators:
           - App\Security\LoginFormAuthenticator
       logout:
         path: app_logout
         # where to redirect after logout
-        target: app_login
+        target: app_racine
 
       remember_me:
         secret: '%kernel.secret%'
@@ -37,8 +35,8 @@ security:
   # Note: Only the *first* access control that matches will be used
   access_control:
     - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-    - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/admin, roles: [IS_AUTHENTICATED_FULLY,ROLE_ADMIN] }
     - { path: ^/, roles: ROLE_USER }
 
   role_hierarchy:
-    ROLE_ADMIN: [ROLE_USER]
+    ROLE_ADMIN: ROLE_USER
